--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@
   box-sizing: border-box;
 }
 
+/* Reset font-size to 1rem = 10px */
+/* 1.6rem = 16px */
+/* .1rem = 1px */
+html {
+  font-size: 62.5%;
+}
+
 :root {
   color-scheme: light dark;
 
@@ -29,8 +36,15 @@ button {
   font-family: inherit;
 }
 
+.container {
+  max-width: 1100px;
+  margin-inline: auto;
+  padding-inline: 10px;
+}
+
 body {
   font-family: var(--font-family);
+  font-size: 1.6rem;
 }
 
 /* @media (prefers-color-scheme: dark) {
