--- a/src/components/password-form/password-form.module.css
+++ b/src/components/password-form/password-form.module.css
@@ -67,3 +67,36 @@
 .generate-button:hover {
   box-shadow: none;
 }
+
+/* alert */
+/* 
+.alert-container {
+  width: 30rem;
+  background-color: red;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+
+.alert {
+  width: 25rem;
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  border-bottom: 4px solid var(--success-color);
+  background-color: var(--primary-color);
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  text-align: center;
+  color: var(--success-color);
+  animation: right 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) alternate;
+}
+
+@keyframes right {
+  from {
+    transform: translateX(300px);
+  }
+  to {
+    transform: translateX(0);
+  }
+} */
