random password generator functionality added

--- a/src/components/password-form/password-form.module.css
+++ b/src/components/password-form/password-form.module.css
@@ -68,6 +68,18 @@
   box-shadow: none;
 }
 
+@media screen and (max-width: 425px) {
+  .password-input {
+    width: 100%;
+  }
+
+  .generate-button {
+    width: 100%;
+    padding-inline: 1.5rem;
+    font-size: 2.5rem;
+  }
+}
+
 /* alert */
 /* 
 .alert-container {
