--- a/src/components/password-generator/password-generator.module.css
+++ b/src/components/password-generator/password-generator.module.css
@@ -15,9 +15,25 @@
   display: flex;
   gap: 11.8rem;
   margin-top: 4rem;
+  flex-wrap: wrap;
 }
 
 /* Left */
 .generate-password-container {
-  width: 52.2rem;
+  flex: 1;
+}
+
+@media screen and (max-width: 425px) {
+  .password-generator {
+    padding-block: 2rem;
+  }
+
+  .content-wrapper {
+    gap: 4rem;
+    margin-top: 0;
+  }
+
+  .head-title {
+    font-size: 4.5rem;
+  }
 }
