all functionality added

--- a/src/components/password-form/password-form.module.css
+++ b/src/components/password-form/password-form.module.css
@@ -32,6 +32,22 @@
   scale: 1.05;
 }
 
+.copied-icon {
+  width: 4rem;
+  aspect-ratio: 1;
+  animation: fadeUp 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: scale 0.3s ease;
+}
+
+@keyframes fadeUp {
+  from {
+    transform: scale(0.1);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 .password-strength-meter-container {
   width: 100%;
   height: 0.8rem;
