--- a/src/components/password-history/password-history.module.css
+++ b/src/components/password-history/password-history.module.css
@@ -45,6 +45,22 @@
   scale: 1.05;
 }
 
+.copied-icon {
+  width: 3rem;
+  aspect-ratio: 1;
+  animation: fadeUp 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: scale 0.3s ease;
+}
+
+@keyframes fadeUp {
+  from {
+    transform: scale(0.1);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 .clear-history {
   color: var(--primary-color);
   text-shadow: 2px 2px 0px var(--secondary-color);
@@ -59,4 +75,11 @@
 .clear-history:hover {
   text-shadow: none;
   color: var(--danger-color);
+}
+
+.empty-history {
+  color: var(--secondary-color);
+  font-size: 2rem;
+  margin-top: 4rem;
+  text-align: center;
 }
