complete the random password generator app

--- a/src/components/password-form/password-form.module.css
+++ b/src/components/password-form/password-form.module.css
@@ -56,9 +56,9 @@
 }
 
 .password-strength-meter {
-  width: 10%;
   height: 100%;
-  background-color: var(--danger-color);
+  transition: width 1s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    background-color 1s linear;
 }
 
 .generate-button {
