--- a/src/components/password-history/password-history.module.css
+++ b/src/components/password-history/password-history.module.css
@@ -30,6 +30,9 @@
   flex: 1;
   font-size: 2.2rem;
   color: var(--primary-color);
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
 
 .copy-icon {
